--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "bensampo/laravel-enum": "^6.0",
         "darkaonline/l5-swagger": "8.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
@@ -32,9 +33,6 @@
         },
         "classmap": [
             "database"
-        ],
-        "files": [
-            "app/Helpers/coreConstants.php"
         ]
     },
     "autoload-dev": {
