--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "algolia/algoliasearch-client-php": "^3.3",
+        "algolia/scout-extended": "2.0",
         "bensampo/laravel-enum": "^6.0",
         "darkaonline/l5-swagger": "8.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
+        "laravel/scout": "^9.4",
         "laravel/tinker": "^2.7"
     },
     "require-dev": {
