--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
         "php": "^8.0.2",
         "bensampo/laravel-enum": "^6.0",
         "darkaonline/l5-swagger": "8.1",
+        "doctrine/dbal": "^3.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
+        "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7"
     },
     "require-dev": {
