upload avatar and book image

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "bensampo/laravel-enum": "^6.0",
         "darkaonline/l5-swagger": "8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "kreait/laravel-firebase": "^4.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7"
