fix swagger ReviewController

--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,27 @@ L5_SWAGGER_GENERATE_ALWAYS=true
 L5_SWAGGER_CONST_SECURITY="[{"Bearer":[]}]"
 
 SPA_URL="http://localhost:3002"
+
+L5_SWAGGER_CONST_HOST=http://localhost:8000/api/
+L5_SWAGGER_GENERATE_ALWAYS=true
+
+SPA_URL=http://localhost:3002/
+
+
+ALGOLIA_APP_ID=P6AKFG4D5Q
+ALGOLIA_SECRET=da246bbbdb7f4a9c9f442a998446e317
+SCOUT_IDENTIFY=true
+
+
+# relative or full path to the Service Account JSON file
+FIREBASE_CREDENTIALS=resources\firebasecredentials.json
+# You can find the database URL for your project at
+
+# https://console.firebase.google.com/project//database
+FIREBASE_DATABASE_URL=https://bookstore-e63f0.firebaseio.com/
+GOOGLE_APPLICATION_CREDENTIALS=
+
+
+GOOGLE_CLIENT_ID=463343640670-rhp0bf2r6l5tbv96t86vhfmbrh1tf2u3.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URL=http://127.0.0.1:8000/api/auth/google/callback
