--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
     "require": {
         "php": "^8.0.2",
         "algolia/algoliasearch-client-php": "^3.3",
-        "algolia/scout-extended": "2.0",
         "bensampo/laravel-enum": "^6.0",
         "darkaonline/l5-swagger": "8.1",
         "doctrine/dbal": "^3.5",
@@ -21,8 +20,8 @@
         "laravel/scout": "^9.4",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
-        "maatwebsite/excel": "^3.1",
-        "psr/simple-cache": "1.0"
+        "psr/simple-cache": "1.0",
+        "mehradsadeghi/laravel-filter-querystring": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
